# 3DHodgeDecomposition

./: README.md
HDEdge/: CMakeLists.txt  README.md
HDEdge/src/: FlannUtils.h  HDEdge.cpp  HDEdge.h  My_Triangulation.cpp  My_Triangulation.h  RKIntegrator.cpp  RKIntegrator.h  main.cpp
HDFacet/: CMakeLists.txt  README.md
HDFacet/src/: Decomposition.cpp  Decomposition.h  My_Triangulation.cpp  My_Triangulation.h  RKIntegrator.cpp  RKIntegrator.h  main.cpp  nanoflann.hpp
models/: 2sphere.off  sphere.off  torus.off
